[gd_scene load_steps=10 format=3 uid="uid://fajvldcur2nq"]

[ext_resource type="Script" path="res://Characters/Player/DOTs/hatchling.gd" id="1_fieo1"]
[ext_resource type="Texture2D" uid="uid://b6mv30rvw66t8" path="res://Art/My Art/Icons/DOT/threadling.png" id="2_yk3o3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h1fvt"]
radius = 3.0
height = 11.0

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ri0"]
atlas = ExtResource("2_yk3o3")
region = Rect2(11, 12, 9, 6)

[sub_resource type="Animation" id="Animation_2ejrj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gtgh8"]
resource_name = "spawn_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(7, -9), Vector2(9, -9), Vector2(14, 9.53674e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.771436, -0.47473, 0.397935, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ystm"]
_data = {
"RESET": SubResource("Animation_2ejrj"),
"spawn_anim": SubResource("Animation_gtgh8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_33my0"]
radius = 158.256

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_21sh7"]
radius = 4.0
height = 12.0

[node name="hatchling" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_fieo1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_h1fvt")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.65098)
texture = SubResource("AtlasTexture_r8ri0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ystm")
}

[node name="detection_radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_radius"]
shape = SubResource("CircleShape2D_33my0")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_21sh7")
debug_color = Color(1, 0.352941, 0.572549, 0.419608)

[node name="anchor" type="Node2D" parent="."]

[node name="walk_destination" type="Node2D" parent="anchor"]
position = Vector2(65, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="detection_radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
